# purgekit

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
docs/: architecture-windows-optimizer.md  prd-windows-optimizer.md
docs/research/: naming-brainstorm.md  user-needs-forum-research.md  visual-identity-concept.md  windows-optimizer-app-study.md
docs/stories/: validation-report-mvp.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  session.rs  state.rs
src-tauri/src/commands/: cache.rs  config.rs  developer.rs  elevation.rs  gaming.rs  gpu.rs  mod.rs  monitor.rs  services.rs  startup.rs
src-tauri/src/modules/: cache_cleaner.rs  dev_cleaner.rs  gaming_mode.rs  gpu_cache.rs  mod.rs  service_manager.rs  startup_manager.rs  system_monitor.rs
src-tauri/src/platform/: elevation.rs  filesystem.rs  mod.rs  nvml.rs  registry.rs  wmi_client.rs
src/hooks/: useElevation.ts  useElevationDialog.ts  useInvoke.ts  useSessionRestore.ts  useSystemMetrics.ts
src/lib/: constants.ts  format.ts  tauri.ts
src/pages/: CacheCleaner.tsx  Dashboard.tsx  DeveloperMode.tsx  GamingMode.tsx  GpuCache.tsx  ServiceManager.tsx  Settings.tsx  StartupManager.tsx  SystemMonitor.tsx
src/stores/: cleaner-store.ts  gpu-store.ts  metrics-store.ts  monitor-store.ts  settings-store.ts  system-store.ts
src/styles/: globals.css
src/types/: cleaner.ts  ipc.ts  metrics.ts  services.ts
(+43 files in other folders)
